src/test/contracts/negative/fail1.ligo
function hello (const x : int) : return is
  block {
      const boom : int =
        if boom > x
        else x;
  } with boom
